# RVS-Cam-Stream

./: CMakeLists.txt  README.txt  setenv.sh
host/: host_poll  host_poll.cpp
inc/: RvsSignalCallbacks.h  RvsSignalEmitter.h  RvsSignalsCustom.h  RvsTcpListener.h
scripts/: host_commands.sh  server_commands.sh  setup_amd64.sh  setup_arm64.sh  setup_qcs6490.sh
server/: control_server.py  docker-compose.yml  make_db.sh  reset_db_clean_start.sh  server_controller.cpp
server/auth/: Dockerfile  auth.js  package.json
server/bridge/: Dockerfile  bridge.py  bridge.sh
server/media-service/: mediamtx.yml
server/web/: Dockerfile  control.json  index.html  layout.html  main.py  package.json  requirements.txt  server.js
server/web/templates/: login.html
server/web/views/: index.ejs  layout.ejs  login.ejs
src/: RvsSignalCallbacks.c  RvsSignalEmitter.c  RvsSignalsCustom.c  RvsTcpListener.c  RvsUsbCameraToWebTestapp.c  UsbCameraToWebTestapp.cc
